[SGP-245][SGP-247] Fixing disabled element color and bad contrast button color for hover

--- a/caktus_primer/static/stylus/examples.styl
+++ b/caktus_primer/static/stylus/examples.styl
@@ -109,8 +109,8 @@ $brand-color = grey
   button-style({
     bg: closest-aa-contrast($brand-color, lightgrey),
     fg: lightgrey,
-    hover: darken($brand-color, 20%),
-    active: lighten($brand-color, 20%),
+    hover: darken(closest-aa-contrast($brand-color, lightgrey), 20%),
+    active: lighten(closest-aa-contrast($brand-color, lightgrey), 20%),
     interactive: true,
   })
 
